sf-ai-orchestrator/force-app/main/default/objects/AI_MongoDB_Config__mdt/AI_MongoDB_Config__mdt.object-meta.xml
<CustomObject>
    <description>MongoDB connection configuration for the AI Orchestration execution log store.</description>
    <label>AI MongoDB Config</label>
    <pluralLabel>AI MongoDB Configs</pluralLabel>
</CustomObject>