sf-ai-orchestrator/force-app/main/default/objects/AI_MongoDB_Config__mdt/fields/App_Id__c.field-meta.xml
<CustomField>
    <fullName>App_Id__c</fullName>
    <label>Proxy Base Path</label>
    <description>Base path of your MongoDB REST proxy (e.g. /mongo). The Named Credential URL + this path forms the root endpoint.</description>
    <type>Text</type>
    <length>255</length>
</CustomField>