sf-ai-orchestrator/force-app/main/default/objects/AI_MongoDB_Config__mdt/fields/Data_Source__c.field-meta.xml
<CustomField>
    <fullName>Data_Source__c</fullName>
    <label>Data Source (Cluster Name)</label>
    <type>Text</type>
    <length>80</length>
    <required>true</required>
</CustomField>