sf-ai-orchestrator/force-app/main/default/objects/AI_MongoDB_Config__mdt/fields/Database_Name__c.field-meta.xml
<CustomField>
    <fullName>Database_Name__c</fullName>
    <label>Database Name</label>
    <type>Text</type>
    <length>80</length>
    <required>true</required>
</CustomField>