sf-ai-orchestrator/force-app/main/default/objects/AI_MongoDB_Config__mdt/fields/Executions_Collection__c.field-meta.xml
<CustomField>
    <fullName>Executions_Collection__c</fullName>
    <label>Executions Collection</label>
    <type>Text</type>
    <length>80</length>
    <required>true</required>
</CustomField>