sf-ai-orchestrator/force-app/main/default/objects/AI_MongoDB_Config__mdt/fields/Named_Credential_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Named_Credential_API_Name__c</fullName>
    <label>Named Credential API Name</label>
    <type>Text</type>
    <length>40</length>
    <required>true</required>
</CustomField>