sf-ai-orchestrator/force-app/main/default/objects/AI_MongoDB_Config__mdt/fields/Org_Id__c.field-meta.xml
<CustomField>
    <fullName>Org_Id__c</fullName>
    <label>Salesforce Org ID</label>
    <type>Text</type>
    <length>18</length>
</CustomField>