sf-ai-orchestrator/force-app/main/default/objects/AI_MongoDB_Config__mdt/fields/Timeout_Seconds__c.field-meta.xml
<CustomField>
    <fullName>Timeout_Seconds__c</fullName>
    <label>Timeout (Seconds)</label>
    <type>Number</type>
    <precision>3</precision>
    <scale>0</scale>
</CustomField>