sf-ai-orchestrator/force-app/main/default/objects/AI_MongoDB_Config__mdt/fields/Write_Mode__c.field-meta.xml
<CustomField>
    <fullName>Write_Mode__c</fullName>
    <label>Write Mode</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ASYNC_BEST_EFFORT</fullName>
                <default>true</default>
                <label>Async Best Effort (fire-and-forget)</label>
            </value>
            <value>
                <fullName>SYNC_REQUIRED</fullName>
                <label>Sync Required (fail workflow on error)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>